# rightcodes-tui-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: INDEX.md  worklog.md
docs/plans/: 2026-02-07-rightcodes-cli-dashboard-feasibility.md  2026-02-07-tui-dashboard-implementation-plan.md
docs/specs/: 2026-02-07-fix-textual-render-name-collision.md  2026-02-08-add-gitignore.md  2026-02-08-add-update-check.md  2026-02-08-fix-theme-toggle-ghosting.md  tui-dashboard-mvp.md
docs/task-summaries/: 2026-02-07-fix-textual-render-name-collision.md  2026-02-07-project-folder-consolidation.md  2026-02-07-tui-dashboard-mvp-implementation.md  2026-02-08-add-gitignore.md  2026-02-08-add-update-check.md  2026-02-08-dashboard-ui-polish-and-use-logs.md  2026-02-08-docs-refresh.md  2026-02-08-fix-theme-toggle-ghosting.md
docs/templates/: task-summary-template.md
src/rightcodes_tui_dashboard/: __init__.py  __main__.py  cli.py  errors.py  privacy.py
src/rightcodes_tui_dashboard/api/: __init__.py  (+1 more)
tests/: conftest.py  test_api_client_errors.py  test_auth_token_parsing.py  test_backoff.py  test_burn_eta_layout.py  test_calculations.py  test_cli_help_output.py  test_cli_version_flag.py  test_duration_and_parsing.py  test_logs_today_range.py  test_masking.py  test_quota_overview_line_layout.py  test_smoke_cli.py  test_textual_render_name_collision.py  test_token_store_global_file.py  test_ui_theme_toggle_artifact_guard.py  test_update_check.py  test_use_log_time_format.py  test_use_logs_extract.py
tools/: rightcodes_doctor.py
(+10 files in other folders)
