[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rightcodes-tui-dashboard"
version = "0.1.17"
description = "Right.codes CLI + TUI dashboard (personal usage stats) without Playwright."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { "Repository" = "https://github.com/okwinds/rightcodes-tui-dashboard", "Issues" = "https://github.com/okwinds/rightcodes-tui-dashboard/issues" }
dependencies = [
  "httpx>=0.25",
  "platformdirs>=3.6",
  "textual>=0.58",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "respx>=0.21",
]
keyring = [
  "keyring>=24",
]

[project.scripts]
rightcodes = "rightcodes_tui_dashboard.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
